<resources>
    <string name="app_name">festify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="image_contentDescription">Event Head Image</string>
    <string name="event_name">Event Name</string>
    <string name="event_start_date">Start date</string>
    <string name="event_end_date">End date</string>
    <string name="event_register_button">Register</string>
    <string name="lorem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium vero rem voluptate, magnam laborum eos nostrum culpa, unde iste natus quos hic iure corporis officia beatae ducimus sed earum modi. Animi, repellat et quos commodi tenetur aliquam obcaecati blanditiis, assumenda dolores aut eligendi non culpa ipsum consectetur alias laboriosam cum. Illum tenetur amet consequuntur nobis fuga, distinctio sapiente animi illo.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium vero rem voluptate, magnam laborum eos nostrum culpa, unde iste natus quos hic iure corporis officia beatae ducimus sed earum modi. Animi, repellat et quos commodi tenetur aliquam obcaecati blanditiis, assumenda dolores aut eligendi non culpa ipsum consectetur alias laboriosam cum. Illum tenetur amet consequuntur nobis fuga, distinctio sapiente animi illo.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium vero rem voluptate, magnam laborum eos nostrum culpa, unde iste natus quos hic iure corporis officia beatae ducimus sed earum modi. Animi, repellat et quos commodi tenetur aliquam obcaecati blanditiis, assumenda dolores aut eligendi non culpa ipsum consectetur alias laboriosam cum. Illum tenetur amet consequuntur nobis fuga, distinctio sapiente animi illo.</string>
    <string name="lbl_add_event">Add Event</string>
    <string name="event_details">Event description</string>
    <string name="event_venue">Venue</string>
    <string name="event_location">Event Location</string>
    <string name="title_select_image">Select Image</string>
    <string name="lbl_camera">camera</string>
    <string name="lbl_gallery">gallary</string>
</resources>