<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.festify.festify.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_createEventFragment"
            app:destination="@id/createEventFragment"
            app:enterAnim="@anim/transition_right_to_left"
            app:popExitAnim="@anim/transition_left_to_right" />
        <action
            android:id="@+id/action_navigation_home_to_eventDetailFragment"
            app:destination="@id/eventDetailFragment"
            app:enterAnim="@anim/transition_right_to_left"
            app:popEnterAnim="@anim/transition_left_to_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.festify.festify.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.festify.festify.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/createEventFragment"
        android:name="com.festify.festify.ui.CreateEvent.CreateEventFragment"
        android:label="Create new event"
        tools:layout="@layout/fragment_create_event" >
        <action
            android:id="@+id/action_createEventFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/transition_left_to_right"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="com.festify.festify.ui.EventDetail.EventDetailFragment"
        android:label="EventDetailFragment" />
</navigation>