<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_4sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/event_image_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:alpha="1"
            android:background="#2196F3"
            android:gravity="center"
            android:text="@string/event_name"
            android:textSize="@dimen/_25sdp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_event_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0.8"
                android:contentDescription="@string/image_contentDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/image_quinox">
                <!--transparency of view -->
            </ImageView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="src_in">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/_6sdp"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:layout_editor_absoluteX="1dp">

                <TextView
                    android:id="@+id/event_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/event_start_date"
                    android:textColor="#255d00"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/date_separator_view"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <View
                    android:id="@+id/date_separator_view"
                    android:layout_width="11dp"
                    android:layout_height="2dp"
                    android:background="#255d00"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/event_end_date"
                    app:layout_constraintStart_toEndOf="@id/event_start_date"
                    app:layout_constraintTop_toTopOf="parent">

                </View>

                <TextView
                    android:id="@+id/event_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_end_date"
                    android:textColor="#255d00"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/date_separator_view"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:backgroundTint="#FFDE03"
                android:gravity="center"
                android:text="@string/event_register_button">

            </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
        </FrameLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>